# smtp-checker-cli

./: MANIFEST.in  README.md  pyproject.toml  setup.py  tea.yaml
.github/workflows/: ci.yml
tests/: test_smtp_utils.py
